Clean-ups and finalisations.